# wordcartel

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  backlog.toml  clippy.toml  deny.toml  rust-toolchain.toml
.superpowers/sdd/: task-14-report.md
docs/: backlog-archive.md  engineering-health.md  ux-backlog.md
docs/design/: backlog-integration-relationships.md  c1-writing-caret-scoping.md  command-surface-contract.md  cursor-system-concept-review.md  cursor-system-concept.md  effort-p-grounding.md  effort-p-plugin-system-design-space.md  effort-p2-grounding.md  effort-p3-grounding.md  prose-linters-design-space.md  prose-linters-scan.md  prose-structure-arc.md  prose-text-objects-design-space.md  s4-grounding.md  s4-prose-surgery-scoping.md
docs/superpowers/plans/: 2026-06-22-wordcartel-01-edit-kernel.md  2026-06-22-wordcartel-02-render-core.md  2026-06-22-wordcartel-03a-block-tree.md  2026-06-22-wordcartel-03b-block-roles.md  2026-06-22-wordcartel-coverage-ledger.md  2026-06-23-wordcartel-03c-blocktree-rope.md  2026-06-23-wordcartel-04a-terminal-shell.md  2026-06-23-wordcartel-04b1-async-substrate.md  2026-06-23-wordcartel-04b2-crash-safety.md  2026-06-24-wordcartel-04c1-filter-export.md  2026-06-24-wordcartel-04c2-repar-transforms.md  2026-06-24-wordcartel-04c3-clipboard-sync.md  2026-06-24-wordcartel-04r-buffer-extraction.md  2026-06-24-wordcartel-05a-config-keymap.md  2026-06-25-wordcartel-05b-palette-menu.md  2026-06-25-wordcartel-05c-nav-selection.md  2026-06-25-wordcartel-05cm-mouse.md  2026-06-25-wordcartel-05d-focus-experience.md  2026-06-25-wordcartel-05e-search-replace.md  2026-06-26-wordcartel-05f-harper-diagnostics.md  2026-06-26-wordcartel-05g-outline-folding.md  2026-06-26-wordcartel-theming-01-model-centralization.md  2026-06-27-wordcartel-08-editor-essentials.md  2026-06-27-wordcartel-09b-wordstar-keymap.md  2026-06-27-wordcartel-theming-02-producers-geometry.md  2026-06-27-wordcartel-theming-03-import-config-picker.md  2026-06-28-wordcartel-06-multi-buffer-workspace.md  2026-06-28-wordcartel-07-file-open-save-as-new.md  2026-06-28-wordcartel-09a-marked-blocks.md  2026-06-28-wordcartel-hardening-fuzz-proptest-plan.md  2026-06-28-wordcartel-m1-changeset-selection-valid.md  2026-06-28-wordcartel-m2-edit-submission-boundary.md  2026-06-29-wordcartel-m3-io-fault-injection.md  2026-06-29-wordcartel-m4-panic-isolation.md  2026-06-29-wordcartel-m5-resource-caps.md  2026-06-29-wordcartel-m7-core-property-fuzz.md  2026-06-30-wordcartel-clippy-debt-cleanup.md  2026-06-30-wordcartel-m4-rest-parse-panic-reader-supervision.md  2026-07-01-wordcartel-incremental-soundness-reconcile.md  2026-07-01-wordcartel-m5-followups.md  (+53 more)
docs/superpowers/reviews/: 2026-07-08-swap-idle-thrash-fable-request.md
docs/superpowers/specs/: 2026-06-21-groundwords-design.md  2026-06-21-wordcartel-design.md  2026-06-23-wordcartel-04b-async-crash-safety.md  2026-06-24-multi-buffer-workspace-design.md  2026-06-24-wordcartel-04c1-filter-export-design.md  2026-06-24-wordcartel-04c2-repar-transforms-design.md  2026-06-24-wordcartel-04c3-clipboard-sync-design.md  2026-06-24-wordcartel-05a-config-keymap-design.md  2026-06-25-wordcartel-05b-palette-menu-design.md  2026-06-25-wordcartel-05c-nav-selection-design.md  2026-06-25-wordcartel-05cm-mouse-design.md  2026-06-25-wordcartel-05d-focus-experience-design.md  2026-06-25-wordcartel-05e-search-replace-design.md  2026-06-26-wordcartel-05f-harper-diagnostics-design.md  2026-06-26-wordcartel-05g-outline-folding-design.md  2026-06-26-wordcartel-theming-design.md  2026-06-27-wordcartel-08-editor-essentials-design.md  2026-06-27-wordcartel-09b-wordstar-keymap-design.md  2026-06-28-wordcartel-06-multi-buffer-workspace-design.md  2026-06-28-wordcartel-07-file-open-save-as-new-design.md  2026-06-28-wordcartel-09a-marked-blocks-design.md  2026-06-28-wordcartel-m1-changeset-selection-valid-design.md  (+65 more)
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  PKGBUILD.template
scratchpad/c5-file-interface/: decisions.md  grounding-packet.md
scratchpad/effort-1-gates/: decisions.md  map-flakes.md  map-h26.md  map-h27.md  map-h28.md  map-testinfra.md
scratchpad/h31-gates/: decisions.md  map-grounding.md  measurement-postfix.md  mutation-log.md  observation-prefix.md  run_n.sh
scripts/: backlog
scripts/smoke/: clean-stale.sh  run.sh  tmux-drive.sh
wordcartel/: Cargo.toml
wordcartel-core/: Cargo.toml
wordcartel-core/fuzz/: Cargo.toml
wordcartel-core/fuzz/corpus/apply_pipeline/: heading.md
wordcartel-core/fuzz/corpus/block_tree/: refdef.md
wordcartel-core/fuzz/fuzz_targets/: apply_pipeline.rs  block_tree.rs
wordcartel-core/src/: block_tree.rs  buffer.rs  change.rs  count.rs  diagnostics.rs  history.rs  layout.rs  lib.rs  md_parse.rs  outline.rs  proptest_strategies.rs  register.rs  search.rs  selection.rs  style.rs  test_support.rs  textobj.rs  theme.rs
wordcartel-core/tests/: block_roles_integration.rs  block_tree_oracle.proptest-regressions  block_tree_oracle.rs  integration.rs  render_integration.rs
wordcartel-nlp/: Cargo.toml
wordcartel-nlp/src/: classify.rs  lib.rs
wordcartel/src/: app.rs  base16.rs  blocks_marked.rs  chrome.rs  chrome_geom.rs  clipboard.rs  commands.rs  compose.rs  config.rs  cursor_picker.rs  cursor_style.rs  density.rs  derive.rs  diag_overlay.rs  diag_provider.rs  diagnostics_run.rs  e2e.rs  edit_apply.rs  editor.rs  export.rs  file.rs  file_browser.rs  file_browser_commit.rs  file_browser_intercept.rs  file_browser_listing.rs  filter.rs  fold.rs  fsx.rs  harper_ls.rs  input.rs  jobs.rs  jobs_apply.rs  keymap.rs  lenses.rs  lib.rs  limits.rs  lines.rs  list_window.rs  lsp_rpc.rs  main.rs  (+41 more)
wordcartel/src/commands/: edit.rs  prose_ops.rs  textops.rs
wordcartel/src/plugin/: api.rs  host.rs  load.rs  mod.rs  pump.rs  reload.rs  settings.rs
wordcartel/tests/: backlog.rs  edit_seam.rs  fs_chokepoint.rs  harper_ls_integration.rs  harper_ls_probe.rs  module_budgets.rs  sentence_differential.rs
wordcartel/tests/fixtures/plugins/: insert_date.lua  pomodoro.lua  wordcount.lua
(+9 files in other folders)
