[workspace]
resolver = "2"
members = ["wordcartel-core", "wordcartel"]

# Single source of truth for the app version (SemVer, pre-1.0 → 1.0.0 at Effort P).
# Both members inherit via `version.workspace = true`; a git tag `vX.Y.Z` mirrors it and
# the PKGBUILD / `--version` derive from it. See docs/superpowers/specs/2026-07-09-point-release-versioning-design.md.
[workspace.package]
version = "0.2.0"

[workspace.lints.clippy]
all = "deny"
# Anti-regrowth (CLAUDE.md → "Module structure — dispatchers delegate"): a function past
# the clippy.toml threshold (100 lines) must be split or carry an item-local
# `#[allow(clippy::too_many_lines)]` + one-line reason. Not part of `all`; enabled here.
too_many_lines = "deny"
# House-rule ratchets, build-enforced (CLAUDE.md → Rust conventions). None part of `all`.
# - no committed debug output / production landmine macros;
# - the app OWNS the terminal: a stray `println!`/`eprintln!` corrupts the alternate screen, so
#   console writes are denied. The legitimate exceptions carry item-local allows: `main()`'s
#   fatal-error stderr (printed AFTER terminal restore) and the `e2e` release bench (prints results).
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

# Distribution profile: slow to build, fastest to run. Inherits the stock
# `release` profile (opt-level 3) and layers whole-program optimization on top.
# `release` itself is left untouched so `cargo test --release`, the smoke suite,
# and the release benches keep their fast incremental compile.
#   Build with: cargo build --profile release-dist -p wordcartel --bin wcartel
# panic = "unwind" is kept DELIBERATELY: the shell's panic isolation
# (worker-panic catch_unwind, panic -> restore -> recovery-dump) requires
# unwinding. panic = "abort" would silently defeat it and turn a recoverable
# worker panic into a process kill with data loss — never set it here.
[profile.release-dist]
inherits = "release"
lto = "fat"           # whole-program cross-crate inlining/DCE
codegen-units = 1     # one unit — best optimization, no parallelism at link
panic = "unwind"      # REQUIRED — see note above; do not change to "abort"
strip = true          # drop symbols; smaller binary (backtraces still name-mangled)
