[package]
name = "wordcartel-core"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]
harper-core = "2"
pulldown-cmark = "0.13"
ropey = { version = "=1.6.1", default-features = false, features = ["simd"] }
smartstring = "1"
smallvec = "1"
unicode-segmentation = "1"
unicode-width = "0.1"
regex-cursor = { version = "0.1", features = ["ropey"] }
regex-automata = "0.4"
regex-syntax = "0.8"

[dev-dependencies]
proptest = "1"
regex = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
