[package]
name = "wordcartel"
version = "0.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "wcartel"
path = "src/main.rs"

[dependencies]
repar = { path = "../../par-command/repar" }
wordcartel-core = { path = "../wordcartel-core" }
ropey = { version = "=1.6.1", default-features = false, features = ["simd"] }
ratatui = "0.29"
crossterm = "0.28"
thiserror = "2"
dirs = "5"
subprocess = "0.2"

[dev-dependencies]
proptest = "1"
