[package]
name = "wordcartel"
version.workspace = true
edition = "2021"
license = "MIT"

[[bin]]
name = "wcartel"
path = "src/main.rs"

[dependencies]
repar = { path = "../../par-command/repar" }
wordcartel-core = { path = "../wordcartel-core" }
ropey = { version = "=1.6.1", default-features = false, features = ["simd"] }
ratatui = "0.30"
crossterm = "0.28"
thiserror = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
subprocess = "0.2"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
nucleo-matcher = "0.3"
lsp-types = "0.97"
serde_json = "1"
mlua = { version = "0.10", features = ["vendored", "lua54"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints]
workspace = true
